# realword-tide-sqlite-backend

./: .env  .travis.yml  Cargo.toml  README.md
sqlite-db/: realworld.db-wal
src/: app.rs  backend.rs  config.rs  endpoints.rs  errors.rs  lib.rs  main.rs  test_api.rs  utils.rs
src/auth/: mod.rs
src/db/: article.rs  mod.rs  schema.rs  user.rs
src/filters/: mod.rs
src/models/: article.rs  mod.rs  user.rs
src/requests/: article.rs  mod.rs  user.rs
tests/: business_logic_tests.rs
