[package]
name = "realworld-tide-sqlite-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16.0"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.5.10", features = [ "runtime-async-std-native-tls", "sqlite" ] }
async-std = { version = "1.10.0", features = [ "attributes" ] }
validator = { version = "0.14.0", features = ["derive"] }
http-types = "2.12.0"
dotenv = "0.15.0"
jsonwebtoken = "7.2.0"
once_cell = "1.9.0"
async-trait = "0.1.52"

